--- a/src/main/resources/templates/list-concert.html
+++ b/src/main/resources/templates/list-concert.html
@@ -8,14 +8,15 @@
 <body>
     <h1>Concert List</h1>
     <!-- TODO: Add list of concerts -->
-    <a href="/add-concert/">Add Concert</a>
+    <a href="/add-concert/">Add New Concert</a>
     <!-- TODO: show delete link for each concert -->
     <ul>
         <li th:each="concert : ${concerts}">
-            <a  th:href="@{/delete-concert/{id}(id=${concert.id})}">Delete</a>
-            <span th:text="${concert.title}"></span> 
-            <span th:text="${concert.location}"></span>
-           <span th:text="${concert.date}"></span>
+            <a th:href="@{/delete-concert/{id}(id=${concert.id})}">Delete</a>
+            <span th:text="${concert.title}"></span>
+            <span th:text="${concert.description}"></span>
+            <span th:text="${concert.date}"></span>
+            <span th:text="${concert.performer}"></span>
         </li>
     </ul>
 </body>
